--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
+    position: relative;
 }
 
 nav {
@@ -22,16 +23,14 @@ nav a {
     align-items: center;
 }
 
-nav a:hover {
-    background-color: #34495e;
-}
-
 button {
+    transition: background-color .3s;
     padding: 10px;
     background-color: #2c3e50;
     color: white;
     cursor: pointer;
     border: none;
+    position: relative;
 }
 
 body {
@@ -53,6 +52,7 @@ main {
     padding: 20px;
     flex-direction: column;
     align-items: flex-end;
+    z-index: 300;
 }
 
 .menu-transition {
